Configuracion del contexto y base de datos

--- a/gestor_usuarios/src/main/resources/application.properties
+++ b/gestor_usuarios/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.servlet.context-path=/gestor_usuarios
 spring.application.name=gestor_usuarios
+spring.datasource.url=jdbc:postgresql://localhost:5432/gestion_tareas
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+app.security.username=admin
+app.security.password=admin123
+app.security.token.secret=mysupersecretkey
