Configuracion e implementación de api token bearer

--- a/gestor_usuarios/src/main/resources/application.properties
+++ b/gestor_usuarios/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.servlet.context-path=/gestor_usuarios
+server.servlet.context-path=/gestor
 spring.application.name=gestor_usuarios
 spring.datasource.url=jdbc:postgresql://localhost:5432/gestion_tareas
 spring.datasource.username=postgres
@@ -7,3 +7,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 app.security.username=admin
 app.security.password=admin123
 app.security.token.secret=mysupersecretkey
+server.port=8081
