Desarrollo de Apis para crear, actualizar usuario, obtener usuario por identificacion y eliminar

--- a/gestor_usuarios/src/main/resources/application.properties
+++ b/gestor_usuarios/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.servlet.context-path=/gestor
 spring.application.name=gestor_usuarios
-spring.datasource.url=jdbc:postgresql://localhost:5432/gestion_tareas
+spring.datasource.url=jdbc:postgresql://localhost:5432/gestion_usuarios
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
