--- a/gestor_usuarios/src/main/resources/application.properties
+++ b/gestor_usuarios/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.servlet.context-path=/gestor
 spring.application.name=gestor_usuarios
-spring.datasource.url=jdbc:postgresql://localhost:5432/gestion_usuarios
+#spring.datasource.url=jdbc:postgresql://localhost:5432/gestion_usuarios
+spring.datasource.url=jdbc:postgresql://172.17.0.2:5432/gestion_usuarios
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -8,3 +9,4 @@ app.security.username=admin
 app.security.password=admin123
 app.security.token.secret=mysupersecretkey
 server.port=8082
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
